--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,8 +16,8 @@ body {
   width: 100vw;
   height: 100vh;
   background-image:
-    repeating-linear-gradient(to bottom, rgba(0,255,153,0.04) 1px, transparent 3px),
-    url("../images/overlay.png");; /* keep noise */
+    repeating-linear-gradient(to bottom, rgba(0,255,153,0.04) 1px, transparent 3px ),
+    url("../images/overlay.png"); /* keep noise */
   background-size: 100% 2px, cover;
   mix-blend-mode: screen;
   opacity: 0.15;
@@ -108,6 +108,7 @@ body {
 
 .terminal-output {
   width: 90%;
+  font-family: 'Share Tech Mono', monospace;
   max-width: 1100px;
   padding: 2rem;
   background: transparent;
@@ -117,6 +118,8 @@ body {
   align-items: flex-start;
   justify-content: center;
   min-height: 60vh;
+  white-space: pre;
+  line-height: 1.6;
 }
 
 .terminal-line {
